--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
+
 <html>
 <head>
-  <meta charset=utf-8>
-  <title>App</title>
-  <script src="http://worms.zooniverse.org/socket.io/socket.io.js"></script>
-  <link rel="stylesheet" href="application.css" type="text/css" charset="utf-8">
-  <script src="application.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" charset="utf-8">
-    var jQuery  = require("jqueryify");
-    var exports = this;
-    jQuery(function(){
-      var App = require("index");
-      exports.app = new App({el: $("body")});      
-    });
-  </script>
-  
+  <title>Worms Project</title>
+  <link rel="stylesheet" href="application.css" type="text/css">
 </head>
 <body>
-  <div class='zooniverseTopBar'></div>
+  <div class="background"></div>
+  <div id="app"></div>
+  <script src="http://worms.zooniverse.org/socket.io/socket.io.js"></script>
+  <script src="application.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    window.app = require('index');
+  </script>
 </body>
 </html>
