--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
 <html>
 <head>
   <title>Worms Project</title>
-  <link rel="stylesheet" href="application.css" type="text/css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:300|Open+Sans:300,700,800">
+  <link rel="stylesheet" href="./application.css">
 </head>
 <body>
   <div class="background"></div>
   <div id="app"></div>
+  <footer></footer>
   <script src="http://worms.zooniverse.org/socket.io/socket.io.js"></script>
   <script src="application.js" type="text/javascript"></script>
   <script type="text/javascript">
