--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>Worms Project</title>
+  <meta chartset="utf-8">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:300|Open+Sans:300,700,800">
   <link rel="stylesheet" href="./application.css">
 </head>
