--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>The Great Egg Hunt</title>
+  <title>Worm Watch Lab</title>
   <meta chartset="utf-8">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:300|Open+Sans:300,700,800">
   <link rel="stylesheet" href="./application.css">
