--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-  <title>Worm Watch Lab</title>
-  <meta chartset="utf-8">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:300|Open+Sans:300,700,800">
-  <link rel="stylesheet" href="./application.css">
-</head>
-<body>
-  <div class="background"></div>
-  <div id="app"></div>
-  <footer></footer>
-  <script src="application.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    window.app = require('index');
-  </script>
-</body>
+
+  <head>
+
+    <title>Worm Watch Lab</title>
+
+    <meta chartset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:300|Open+Sans:300,700,800">
+    <link rel="stylesheet" href="./application.css">
+
+  </head>
+  
+  <body>
+
+    <div class="background"></div>
+    <div id="app"></div>
+    <footer></footer>
+
+    <script src="application.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      window.app = require('index');
+    </script>
+
+  </body>
+
 </html>
