--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     <div class="background"></div>
     <div id="app"></div>
-    <footer></footer>
+    <div class="footer"></div>
 
     <script src="application.js" type="text/javascript"></script>
     <script type="text/javascript">
