--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,8 @@
     <div class="footer"></div>
 
     <script src="application.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      window.app = require('index');
-    </script>
-
+    <script type="text/javascript">require('index');</script>
+    
   </body>
 
 </html>
