--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,10 @@
     <div id="app"></div>
     <div class="footer"></div>
 
-    <script src="application.js" type="text/javascript"></script>
-    <script type="text/javascript">require('index');</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+    <script src="http://vjs.zencdn.net/4.0/video.js"></script>
     
+    <script src="application.js" type="text/javascript"></script>
   </body>
 
 </html>
