--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <div id="app"></div>
     <div class="footer"></div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://vjs.zencdn.net/4.0/video.js"></script>
     
     <script src="application.js" type="text/javascript"></script>
