--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta chartset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:300|Open+Sans:300,700,800">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300">
     <link rel="stylesheet" href="./application.css">
 
   </head>
