--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300">
-    <link rel="stylesheet" href="./application.css">
+    <link rel="stylesheet" href="./main.css">
 
   </head>
   
@@ -23,7 +23,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://vjs.zencdn.net/4.1/video.js"></script>
     
-    <script src="application.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
   </body>
 
 </html>
