--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
 
     <meta chartset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+    <meta name="viewport" content="width=575, initial-scale=1">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300">
     <link rel="stylesheet" href="./main.css">
 
   </head>
-  
+
   <body>
 
     <div class="background"></div>
@@ -22,7 +22,7 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://vjs.zencdn.net/4.1/video.js"></script>
-    
+
     <script src="main.js" type="text/javascript"></script>
   </body>
 
