--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <meta chartset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=575, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300">
     <link rel="stylesheet" href="./main.css">
 
