--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300">
+    <link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./main.css">
 
   </head>
@@ -24,6 +25,7 @@
     '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WDW6V4');</script>
     <!-- End Google Tag Manager -->
+
     <div class="background"></div>
     <div id="app"></div>
     <div class="footer"></div>
