--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <div id="app"></div>
     <div class="footer"></div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://vjs.zencdn.net/4.1/video.js"></script>
 
     <script src="main.js" type="text/javascript"></script>
